# f1-tenth-waypoints-utils

./: .gitignore  package.xml  setup.cfg  setup.py
f1_tenth_utils/: main.py
f1_tenth_utils/models/: main_model.py
f1_tenth_utils/static/: ProjectManager.py
f1_tenth_utils/utils/: ui_loader.py
f1_tenth_utils/viewmodels/: main_viewmodel.py
f1_tenth_utils/views/dialogs/speed_dialog_view/: speed_dialog_view.py
f1_tenth_utils/views/main/: main_view.py
resource/ui/: f1_tenth_utils_main.ui
