<package format="3">
  <name>f1_tenth_utils</name>
  <version>0.0.1</version>
  <description>F1 Tenth Utilities</description>
  <maintainer email="ymail3@naver.com">Juyoung Kim</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_python</build_depend>
  <exec_depend>ament_python</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>PyQt5</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
